Added unit tests

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "covid19-dashboard",
   "version": "0.1.0",
   "private": true,
+  "author": "Andrea",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
